# youtube-browser-transcript-analyzer

./: .gitignore  AGENTS.md  ANALYZE_VIDEO.bat  OPEN_BROWSER.bat  README.md  START_HERE.bat  pyproject.toml
docs/: CODEX_TEAM_WORKFLOW.md  NON_TECHNICAL_QUICKSTART.md  OPEN_SOURCE_GUIDE.md  RELEASE_CHECKLIST.md
examples/: urls.txt
scripts/: setup_windows.ps1  start_edge_cdp.ps1
scripts/python_bootstrap/: sitecustomize.py
src/yt_browser_analyzer/: __init__.py  artifacts.py  browser.py  capture.py  cli.py  content_analysis.py  numbers.py  timeutil.py  transcript.py  urlutil.py  youtube_page.py
