[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-browser-transcript-analyzer"
version = "0.1.0"
description = "Browser-first YouTube transcript capture and timestamped content analysis."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Open source contributors"}]
dependencies = [
  "playwright>=1.45",
]

[project.scripts]
yt-browser-analyzer = "yt_browser_analyzer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
